ValidationUtil,AbstractSevTest fix